--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.jab.movieapp.DetailActivity"
+        <activity android:name=".DetailActivity"
             android:label="Movies"
             android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".MainActivity">
